Autohide jump button on preview page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -453,7 +453,7 @@
     <string name="settings_eh_detail_size_long">Long</string>
     <string name="settings_eh_detail_size_short">Short</string>
     <string name="settings_eh_list_tile_thumb_size">Thumb size in detail mode</string>
-    <string name="settings_eh_thumb_size">Thumb size in thumb mode</string>
+    <string name="settings_eh_thumb_size">Thumb size</string>
     <string name="settings_eh_thumb_size_large">Large</string>
     <string name="settings_eh_thumb_size_middle">Middle</string>
     <string name="settings_eh_thumb_size_small">Small</string>
