--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -574,6 +574,12 @@
     <string name="settings_advanced_import_data">Import data</string>
     <string name="settings_advanced_import_data_summary">Load data which were previously saved</string>
     <string name="settings_advanced_import_data_successfully">Data imported successfully</string>
+    <string name="settings_advanced_backup_favorite">Backup favorite list</string>
+    <string name="settings_advanced_backup_favorite_summary">Backup remote favorite list to local</string>
+    <string name="settings_advanced_backup_favorite_start">Backing up favorite list %s</string>
+    <string name="settings_advanced_backup_favorite_nothing">Nothing to backup</string>
+    <string name="settings_advanced_backup_favorite_success">Backup favorite list success</string>
+    <string name="settings_advanced_backup_favorite_failed">Backup favorite list failed</string>
 
     <string name="settings_about">About</string>
     <string name="settings_about_declaration" translatable="false">EhViewer</string>
